<resources>
    <string name="app_name">GVoca</string>

    <string name="action_settings">설정</string>
    <string name="action_logout">Logout</string>
    <string name="action_login">Login</string>
    <string name="action_profile">내정보</string>
    <string name="action_notices">공지사항</string>
    <string name="action_go">GO</string>

    <string name="bottom_menu_1">일정</string>
    <string name="bottom_menu_2">학습</string>
    <string name="bottom_menu_3">성적</string>
    <string name="bottom_menu_4">단어장</string>

    <string name="bottom_menu_study_1_on">뜻가림</string>
    <string name="bottom_menu_study_2_on">단어가림</string>
    <string name="bottom_menu_study_3_on">설명가림</string>
    <string name="bottom_menu_study_1_off">뜻보임</string>
    <string name="bottom_menu_study_2_off">단어보임</string>
    <string name="bottom_menu_study_3_off">설명보임</string>



    <string name="bottom_menu_study_4">단어저장</string>



    <string name="category_ele">초등</string>
    <string name="category_mid">중등</string>
    <string name="category_high">고등</string>
    <string name="category_sat">수능</string>

    <string name="title_activity_nmain">NMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_course_lesson">CourseLessonActivity</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_id">ID</string>
    <string name="prompt_password">비밀번호</string>
    <string name="action_sign_in">로그인 및 등록</string>
    <string name="action_sign_in_short">로그인</string>
    <string name="error_invalid_email">이메일 정보가 정확하지 않습니다.</string>
    <string name="error_invalid_password">비밀 번호가 너무 짧습니다. (4자리 이상)</string>
    <string name="error_incorrect_password">비밀 번호가 틀립니다.</string>
    <string name="error_field_required">해당 정보를 입력해 주세요</string>
    <string name="permission_rationale">"id 자동 입력을 위해서는 권한이 필요합니다."</string>
    <string name="main_fragment_title">테스트</string>
    <string name="title_activity_level">LevelActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_study">학습</string>
    <string name="action_test">시험</string>
    <string name="title_activity_study">학습하기</string>
    <string name="save_myword">내단어저장</string>


</resources>
