<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudyActivity">

<android.support.v4.view.ViewPager
    android:id="@+id/study_pager"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

</android.support.v4.view.ViewPager>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <ToggleButton
            android:id="@+id/tbtn_hide_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ToggleButton"
            android:textOff="@string/bottom_menu_study_2_off"
            android:textOn="@string/bottom_menu_study_2_on" />

        <ToggleButton
            android:id="@+id/tbtn_hide_meaning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ToggleButton"
            android:textOff="@string/bottom_menu_study_1_off"
            android:textOn="@string/bottom_menu_study_1_on" />

        <ToggleButton
            android:id="@+id/tbtn_hide_extra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ToggleButton"
            android:textOff="@string/bottom_menu_study_3_off"
            android:textOn="@string/bottom_menu_study_3_on" />

        <Button
            android:id="@+id/btn_word_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_myword" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>